// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RenderEntireTable > should be able to render tables with leading and trailing pipes (|) 1`] = `
<div>
   
  <table>
    <thead>
      <tr>
        <th>
          First Header
        </th>
        <th>
          Second Header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Content Cell
        </td>
        <td>
          Content Cell
        </td>
      </tr>
      <tr>
        <td>
          Content Cell
        </td>
        <td>
          Content Cell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`RenderEntireTable > should be able to render tables without leading and trailing pipes (|) 1`] = `
<div>
   
  <table>
    <thead>
      <tr>
        <th>
          First Header
        </th>
        <th>
          Second Header
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Content Cell
        </td>
        <td>
          Content Cell
        </td>
      </tr>
      <tr>
        <td>
          Content Cell
        </td>
        <td>
          Content Cell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`RenderEntireTable > should support advanced formatting in tables 1`] = `
<div>
   
  <table>
    <thead>
      <tr>
        <th
          align="left"
        >
          Left-aligned
        </th>
        <th
          align="center"
        >
          Center-aligned
        </th>
        <th
          align="right"
        >
          Right-aligned
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          align="left"
        >
          <code>
            git status
          </code>
        </td>
        <td
          align="center"
        >
          List all 
          <em>
            new or modified
          </em>
           files
        </td>
        <td
          align="right"
        >
          Final 
          <del>
            cell
          </del>
        </td>
      </tr>
      <tr>
        <td
          align="left"
        >
          <code>
            git diff
          </code>
        </td>
        <td
          align="center"
        >
          Show file differences that 
          <strong>
            haven't been
          </strong>
           staged
        </td>
        <td
          align="right"
        >
          Final 
          <del>
            cell
          </del>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`RenderEntireTable > should support table cell alignment 1`] = `
<div>
   
  <table>
    <thead>
      <tr>
        <th
          align="left"
        >
          Left-aligned
        </th>
        <th
          align="center"
        >
          Center-aligned
        </th>
        <th
          align="right"
        >
          Right-aligned
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          align="left"
        >
          Cell 1-1
        </td>
        <td
          align="center"
        >
          Cell 1-2
        </td>
        <td
          align="right"
        >
          Cell 1-3
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
